--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,53 @@
     <title>Monitor</title>
 
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="styles/style.css"/>
   </head>
   <body ng-app="DataMonitor" ng-controller="MainCtrl">
     
-    <div class="container">Data Monitor app</div>
-    <div>{{ name }}</div>
+    <div class="header">{{ name }}</div>
 
-    <div>{{ data }}</div>
+    <div class="table-responsive">
+      <table class="monitor table table-bordered">
+        <thead>
+          <tr>
+            <th></th>
+            <th ng-repeat="doc in docs | unique:'doc.fq_bin'">{{ doc.fq_bin }}</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr ng-repeat="outer in docs | unique:'doc.model'">
+            <td class="model_title">{{ outer.model }}</td>
+            <td ng-repeat="inner in docs | unique:'doc.fq_bin'" ng-click="select_docs(outer.model,inner.fq_bin)" class="{{ get_count(outer.model,inner.fq_bin) > 3 ? 'success' : 'danger'}}">
+              {{ get_count(outer.model,inner.fq_bin) }}
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+   <div ng-show="selected_docs!==undefined">
+    <div class="header">DETAILS</div>
+      <div  class="table-responsive" >
+        <table class="table table-striped">
+          <thead>
+            <tr class="row">
+              <th class="col-sm-3 col-md-3 col-lg-3">Model</th>
+              <th class="col-sm-3 col-md-3 col-lg-3">Serial</th>
+              <th class="col-sm-3 col-md-3 col-lg-3">Site</th>
+              <th class="col-sm-3 col-md-3 col-lg-3">Room</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr class="row" ng-repeat="doc in selected_docs">
+              <td class="col-sm-3 col-md-3 col-lg-3">{{ doc.model }}</td>
+              <td class="col-sm-3 col-md-3 col-lg-3">{{ doc.serial_id }}</td>
+              <td class="col-sm-3 col-md-3 col-lg-3">{{ doc.site }}</td>
+              <td class="col-sm-3 col-md-3 col-lg-3">{{ doc.room }}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
 
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -18,6 +58,7 @@
 
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
+     <script src="scripts/filters/unique.js"></script>
   </body>
   </body>
 </html>
