--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
   <body ng-app="DataMonitor" ng-controller="MainCtrl">
     
     <div class="header">{{ name }}</div>
-
-    <div class="table-responsive">
+    <div class="table_container">
+    <div class="table-responsiver">
       <table class="monitor table table-bordered">
         <thead>
           <tr>
@@ -28,10 +28,12 @@
         </tbody>
       </table>
     </div>
+    </div>
+    <div class="table_container">
    <div ng-show="selected_docs!==undefined">
     <div class="header">DETAILS</div>
       <div  class="table-responsive" >
-        <table class="table table-striped">
+        <table class="table table-bordered">
           <thead>
             <tr class="row">
               <th class="col-sm-3 col-md-3 col-lg-3">Model</th>
@@ -51,7 +53,7 @@
         </table>
       </div>
     </div>
-
+    </div>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower_components/angular/angular.min.js"></script>
